--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Socket server for DineTogether",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Justin Pan",
   "license": "ISC",
@@ -12,5 +12,9 @@
     "npm": "^6.2.0",
     "socket.io": "^2.1.0",
     "express": "^4.16.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Justin-pan/DineTogetherSocket"
   }
 }
